[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/entity/entity.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 255, 0, 0, 255, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 255, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 255, 0, 0, 0, 0, 0, 255, 0, 0, 255, 0, 0, 0, 0, 0, 255, 0, 0, 0, 0, 0, 255, 0, 0, 0, 0, 0 ),
"format": "RGB8",
"height": 5,
"mipmaps": false,
"width": 5
}

[sub_resource type="ImageTexture" id=5]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 5, 5 )

[node name="Entity" type="Area2D"]
material = SubResource( 1 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="View" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 5 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
